# ssd_core_engine

./: DISTRIBUTION_GUIDE.md  ENHANCED_FEATURES.md  FILE_ORGANIZATION.md  LICENSE  ORGANIZATION_COMPLETE.md  README.md  README_SPLIT.py  __init__.py  pyproject.toml  requirements.txt  setup.py  ssd_alignment_leap.py  ssd_decision.py  ssd_engine.py  ssd_meaning_pressure.py  ssd_prediction.py  ssd_territory.py  ssd_types.py  ssd_utils.py  test_enhanced_features.py  test_hermann_theory_unity.py  test_territory.py
archive/: README.md
docs/: ARCHITECTURE_GUIDELINES.md  PACKAGE_USAGE_GUIDE.md  README.md  SSD_THEORY_ANALYSIS.md
scripts/: README.md  code_check_fix.py  demo_enhanced.py  detailed_territory_test.py  distribution_options.py  final_check.py  hermann_degner_theory_demo.py
ssd_core_engine/: __init__.py  ssd_alignment_leap.py  ssd_decision.py  ssd_engine.py  ssd_enhanced_leap.py  ssd_meaning_pressure.py  ssd_prediction.py  ssd_subjective_boundary.py  ssd_territory.py  ssd_types.py  ssd_utils.py
ssd_core_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: README.md  test_ssd.py  test_territory_system.py
